--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fixed-supply-token",
+  "name": "milan-token",
   "version": "1.0.0",
   "description": "",
   "main": "truffle-config.js",
@@ -7,21 +7,24 @@
     "test": "test"
   },
   "scripts": {
-    "address": "truffle exec addresses.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "Apache-2.0",
-  "devDependencies": {
-    "bignumber.js": "^6.0.0",
-    "truffle": "^5.0.0",
-    "truffle-assertions": "^0.8.0"
+    "migrate": "truffle migrate --network testnet",
+    "compile": "truffle compile --network ropsten",
+    "verify": "truffle run verify MilanToken --network testnet",
+    "test": "npx builder test",
+    "coverage": "npx builder coverage",
+    "flatten": "truffle-flattener contracts/MilanToken.sol > build/MilanToken.sol"
   },
   "dependencies": {
-    "ethereumjs-util": "^5.1.5",
-    "openzeppelin-solidity": "2.1.2",
-    "truffle-contract": "^3.0.5",
-    "truffle-hdwallet-provider": "0.0.3",
-    "web3": "^1.0.0-beta.34"
+    "@openzeppelin/contracts": "4.1.0",
+    "dotenv": "^9.0.2",
+    "ethers": "^5.4.5",
+    "truffle": "^5.3.11",
+    "truffle-flattener": "^1.5.0",
+    "truffle-hdwallet-provider": "^1.0.17",
+    "truffle-plugin-verify": "^0.5.8",
+    "web3": "^1.3.6"
+  },
+  "devDependencies": {
+    "@openzeppelin/truffle-upgrades": "^1.7.0"
   }
 }
